libecs/tests/Core/Scripting/tests/invalid/component/invalid_component2.pvt
component Transform { # Component declaration blocks don't need curly brackets
    Vector3 position
    Vector3 rotation
    Vector3 scale
}